--- a/packages/documentation/src/pages/getting-started/workflow/write.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/write.mdx
@@ -19,12 +19,12 @@ _The VA handbook has more information about the broader process for delivering s
 
 ## Create feature branch
 
-- Checkout `master` branch and pull the latest
+- Checkout `main` branch and pull the latest
 ```bash
-git checkout master && git pull origin master
+git checkout main && git pull origin main
 ```
 
-- Create a new feature branch from master
+- Create a new feature branch from main
 ```bash
 git checkout -b feature/12345-issue-title
 ```
