--- a/packages/documentation/src/pages/platform/architecture/build-deploy-flows.mdx
+++ b/packages/documentation/src/pages/platform/architecture/build-deploy-flows.mdx
@@ -1,6 +1,6 @@
 ---
 title: Build and deploy Jenkins flows
-tags: Jenkins, drupal, metalsmith, cache, master
+tags: Jenkins, drupal, metalsmith, cache, main
 ---
 
 # Build and deploy process flows
@@ -13,13 +13,13 @@ tags: Jenkins, drupal, metalsmith, cache, master
 
 Here you'll find flow diagrames for the different types of build and deploy flows we have for VA.gov. Those different flows are:
 
-- [Standard master/PR build](#standard-masterpr-build)
+- [Standard main/PR build](#standard-mainpr-build)
 - [Content only build and deploy](#content-only-build-and-deploy)
 - [Daily deploy](#daily-deploy)
 
-## Standard master/PR build
+## Standard main/PR build
 
-This is the typical Jenkins build for any vets-website branch. There is some logic that is different between master and other branches:
+This is the typical Jenkins build for any vets-website branch. There is some logic that is different between main and other branches:
 
 ```mermaid
 graph TD
@@ -40,7 +40,7 @@ graph TD
 9 --> 11[End to end tests]
 11 --> 12[Create archives for each build and upload to S3]
 10 --> 12
-12 --> 13{On master branch?}
+12 --> 13{On main branch?}
 13 -->|Yes| 14[Cache Drupal content and files to S3]
 14 --> 15[Deploy builds to dev and staging]
 13 -->|No| 16(Done)
@@ -56,7 +56,7 @@ When content is changed in Drupal, sometimes we need to publish it immediately o
 ```mermaid
 graph TD
 1(Build started for dev or staging)
-1 --> 2[Fetch build for latest master commit from S3]
+1 --> 2[Fetch build for latest main commit from S3]
 2 --> 3[Build static pages with new content]
 3 --> 4[Skip Webpack build, use assets from most recent build for applications]
 4 --> 5[Create archive for build and upload to S3]
@@ -82,9 +82,9 @@ graph TD
 ```mermaid
 graph TD
 1(Deploy started)
-1 --> 2[Fetch build for latest master commit from S3]
+1 --> 2[Fetch build for latest main commit from S3]
 2 --> 3[Build static pages with new content]
-3 --> 4[Skip Webpack build, use assets from most recent master build for applications]
+3 --> 4[Skip Webpack build, use assets from most recent main build for applications]
 4 --> 5[Create archive for build and upload to S3]
 5 --> 6[Create GitHub release]
 6 --> 7[Wait for 60 minutes]
