--- a/packages/documentation/src/pages/platform/unit-testing.mdx
+++ b/packages/documentation/src/pages/platform/unit-testing.mdx
@@ -12,7 +12,7 @@ All new code that is added to `vets-website` should be unit tested and unit test
 
 **Where:** Any *file_name*.unit.spec.js file located in the `/src` folder. This file is usually located in a test directory close to the code being tested.
 
-**When:** [Run the test](/getting-started/common-tasks/test) locally through npm script commands, during the Jenkins build (Unit), and after merging to master.
+**When:** [Run the test](/getting-started/common-tasks/test) locally through npm script commands, during the Jenkins build (Unit), and after merging to main.
 
 **How:** [Write a unit test.](/getting-started/common-tasks/new-unit-test)
 
