--- a/packages/documentation/src/pages/getting-started/common-tasks/new-page.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-page.mdx
@@ -6,9 +6,21 @@ tags: content, vagov-content, markdown, frontmatter, Drupal, cms, static
 # Creating a new content page
 
 <div class="deprecation-message">
-    <h2>We're moving our docs!</h2>
-    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Creating-a-new-content-page.1848737888.html">the latest version of this page</a> on the Platform website.</h3>
-    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+  <h2>We're moving our docs!</h2>
+  <h3>
+    Find{" "}
+    <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Creating-a-new-content-page.1848737888.html">
+      the latest version of this page
+    </a>{" "}
+    on the Platform website.
+  </h3>
+  <h3>
+    Still can't find what you're looking for? Reach out to{" "}
+    <a href="https://dsva.slack.com/archives/CBU0KDSB1">
+      #vfs-platform-support
+    </a>{" "}
+    on Slack.
+  </h3>
 </div>
 
 Note: Check out the [Adding a new feature](/getting-started/common-tasks/new-feature) doc to make sure you're trying to add the right type of feature to VA.gov.
@@ -17,6 +29,6 @@ Note: Check out the [Adding a new feature](/getting-started/common-tasks/new-fea
 
 There are two ways to add a new page to VA.gov; one is by adding it in vagov-content. The other is to add it to the Drupal CMS. Drupal will eventually be the only source of content, but `vagov-content` is expected to be around for the near future.
 
-If you need to add a page to `vagov-content`, there is [documentation](https://github.com/department-of-veterans-affairs/vagov-content/blob/master/docs/index.md) in that repo. You should also contact the website team to coordinate with them on where the new page should live.
+If you need to add a page to `vagov-content`, there is [documentation](https://github.com/department-of-veterans-affairs/vagov-content/blob/main/docs/index.md) in that repo. You should also contact the website team to coordinate with them on where the new page should live.
 
 If you need to add a page to Drupal, coordinate with the cms team via your project manager.
