add deprecation message

--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -5,6 +5,8 @@ tags: overview
 
 # VA.gov Forms Library
 
+**NOTE: THIS DOCUMENTATION IS NO LONGER ACTIVELY MAINTAINED AND WILL BE REMOVED ON 6/17/2022. FOR UP TO DATE DOCUMENTATION ON THE FORMS LIBRARY, PLEASE REFER TO THE [OFFICIAL PLATFORM WEBSITE](https://depo-platform-documentation.scrollhelp.site/developer-docs/VA-Forms-Library-Overview.2085355587.html)**
+
 The VA.gov Forms Library provides a simple way to create a consistent experience for complex forms for Veterans. Applications created with this framework generally follow this flow:
 
 ```mermaid
