--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -5,36 +5,4 @@ tags: overview
 
 # VA.gov Forms Library
 
-**NOTE: THIS DOCUMENTATION IS NO LONGER ACTIVELY MAINTAINED AND WILL BE REMOVED ON 6/17/2022. FOR UP TO DATE DOCUMENTATION ON THE FORMS LIBRARY, PLEASE REFER TO THE [OFFICIAL PLATFORM WEBSITE](https://depo-platform-documentation.scrollhelp.site/developer-docs/VA-Forms-Library-Overview.2085355587.html)**
-
-The VA.gov Forms Library provides a simple way to create a consistent experience for complex forms for Veterans. Applications created with this framework generally follow this flow:
-
-```mermaid
-graph LR
-    A(Introduction Page) --> B(Form Pages Start)
-    B -. Form Pages .-> C(Review Page)
-    C -- Submission --> D(Confirmation Page)
-```
-
-The forms library consists of several different pieces:
-
-- Standardized **inputs and field sets** for common types of form data
-- **Validation functions** used for commonly collected types of data
-- A standardized **data flow** within the application that triggers validation and updates conditionally displayed UI
-- Hooks for custom validation, hiding/showing fields, and writing custom fields and widgets
-- Save and restore form data using the VA.gov save in progress and prefill APIs
-
-## When to use the forms library
-
-The forms library is best suited for forms that
-
-- are long enough to be organized across multiple pages,
-- have optionally captured or required fields, and
-- require field level or multiple field validation.
-
-The forms library shouldn't be used when
-
-- the form is simple enough to fit on a single page, or
-- when the user experience doesn't benefit from **all** of the steps documented in the above flow.
-
-In these cases, it's recommended to either make simple single page form or to deploy a React app that doesn't use the forms library.
+**NOTE: THIS DOCUMENTATION HAS MOVED, PLEASE REFER TO THE [OFFICIAL PLATFORM WEBSITE](https://depo-platform-documentation.scrollhelp.site/developer-docs/VA-Forms-Library-Overview.2085355587.html)**
