Update api references

--- a/packages/documentation/src/pages/platform/site-structure/environments.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/environments.mdx
@@ -26,9 +26,9 @@ tags: localhost, development, staging, production, automated deployment
 | Environment | site url               | api url                    | buildtype    | NODE_ENV   | Deployments            |
 | ----------- | ---------------------- | -------------------------- | ------------ | ---------- | ---------------------- |
 | localhost   | http://localhost:3001  | http://localhost:3000      | localhost    |            |                        |
-| development | https://dev.va.gov     | https://dev-api.va.gov     | vagovdev     |            | After a merge to main  |
-| staging     | https://staging.va.gov | https://staging-api.va.gov | vagovstaging | production | After a merge to main  |
-| production  | https://www.va.gov     | https://api.va.gov         | vagovprod    | production | Daily, Monday - Friday |
+| development | https://dev.va.gov     | https://dev-platform-api.va.gov     | vagovdev     |            | After a merge to main  |
+| staging     | https://staging.va.gov | https://staging-platform-api.va.gov | vagovstaging | production | After a merge to main  |
+| production  | https://www.va.gov     | https://platform-api.va.gov         | vagovprod    | production | Daily, Monday - Friday |
 
 There are four environments for va.gov:
 
